LPS-60571 Fixes the lateral spacing of the Forms.

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
@@ -1,14 +1,5 @@
 @import "bourbon";
 
-.ddl-form-builder-app {
-	&.container-fluid-1280 {
-		.row {
-			margin-left: 20px;
-			margin-right: 20px;
-		}
-	}
-}
-
 .lfr-ddm-form-container {
 	.lfr-ddm-form-page-title + .row {
 		margin-top: 40px;
